--- a/.github/workflows/hax.yml
+++ b/.github/workflows/hax.yml
@@ -16,4 +16,4 @@ jobs:
           SECRET_PASSWORD: ${{ secrets.PASSWORD }}
         run: |
          curl -sSL -O https://github.com/52bigfish/Hax_extend/raw/main/HaxAutoReNew.exe
-         HaxAutoReNew.exe -user "%SECRET_USERNAME%" -password "%SECRET_PASSWORD%"
+         HaxAutoReNew.exe -user "$SECRET_USERNAME" -password "$SECRET_PASSWORD"
